--- a/src/components/UI/header/Header.module.css
+++ b/src/components/UI/header/Header.module.css
@@ -6,19 +6,47 @@
     padding: 15px 0;
 }
 
-.header__content {
+.header__wrapepr .header__content {
     align-items: center;
     margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
 }
 
-.header__content > * {
+.header__wrapepr .header__content > * {
     padding-right: 10px;
 }
 
-.logo {
+.header__wrapepr .header__content .logo {
     color: #fff;
     text-transform: uppercase;
     font-size: 24px;
     text-decoration: none;
     letter-spacing: 2px;
+}
+
+.header__wrapepr .header__content .auth {
+    color: #fff;
+    font-size: 14px;
+    transition: 1s all ease-in-out;
+    cursor: pointer;
+    opacity: 1;
+    position: relative;
+}
+
+.header__wrapepr .header__content .auth::before {
+    content: '';
+    background-image: url('../../../assets/header/icon/login.svg');
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    display: inline-block;
+    width: 17px;
+    height: 17px;
+    position: absolute;
+    left: -20px;
+}
+
+.header__wrapepr .header__content .auth:hover {
+    opacity: .8;
 }
