--- a/src/styles/_blog.scss
+++ b/src/styles/_blog.scss
@@ -11,7 +11,7 @@
     .card__wrapper {
         display: flex;
 
-        .card {
+        .card-blog {
             margin: 0 15px 30px;
             max-width: 31%;
             display: flex;
