--- a/src/components/UI/loader/Loader.module.css
+++ b/src/components/UI/loader/Loader.module.css
@@ -1,6 +1,8 @@
 .spinner__wrapper {
     width: 100%;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .ldsSpinner {
@@ -24,7 +26,7 @@
     width: 6px;
     height: 18px;
     border-radius: 20%;
-    background: #000;
+    background: #a5a5a5;
 }
 
 .ldsSpinner div:nth-child(1) {
