--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -58,6 +58,7 @@
     }
 
     .visible-block {
+        width: 100%;
         height: 100%;
         background-color: #fff;
         display: flex !important;
