--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -344,7 +344,7 @@
   right: -8px;
   top: -8px;
   background-color: #5f6d92;
-  background-image: url("../assets/catalog/check-marks.svg");
+  background-image: url("../assets/check-marks.svg");
   background-repeat: no-repeat;
   background-position: center center;
   border-radius: 50%;
