--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -5,6 +5,7 @@
     flex-direction: column;
     align-items: center;
     position: relative;
+    color: inherit;
 
     &::before {
         content: '';
@@ -65,7 +66,8 @@
         flex-direction: column;
         align-items: center;
         position: relative;
-
+        text-decoration: none;
+        color: inherit;
 
         .img__wrapper {
             position: relative;
