--- a/src/styles/_category.scss
+++ b/src/styles/_category.scss
@@ -50,7 +50,7 @@
         }
 
 
-        .card {
+        .category-card {
             height: 350px;
             background-color: #fff;
             position: relative;
