--- a/src/components/UI/footer/Footer.module.css
+++ b/src/components/UI/footer/Footer.module.css
@@ -1,6 +1,6 @@
 .footer__wrapper {
     padding-top: 40px;
-    margin: 50px 0 30px;
+    margin-bottom: 30px;
     border-top: 1px solid #e4e4e4;
     align-self: center;
 }
