add gallery and main product info to Product page

--- a/src/styles/_blog.scss
+++ b/src/styles/_blog.scss
@@ -1,6 +1,7 @@
 .blog {
     align-self: center;
     flex-direction: column;
+    margin-bottom: 50px;
 
     .title {
         text-align: center;
