--- a/src/components/UI/footer/Footer.module.css
+++ b/src/components/UI/footer/Footer.module.css
@@ -3,11 +3,13 @@
     margin-bottom: 30px;
     border-top: 1px solid #e4e4e4;
     align-self: center;
+    width: 100%;
 }
 
 .footer__content {
     flex-direction: column;
     align-items: center;
+    margin: 0 auto;
 }
 
 .logo {
