--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -158,9 +158,11 @@
   text-align: center;
   margin: 30px 0;
 }
+.catalog .slick-slider {
+  overflow-x: clip;
+}
 .catalog .slick-slider .slick-list {
   overflow: initial;
-  overflow-x: clip;
   z-index: 1;
 }
 .catalog .slick-slider .slick-list .slick-slide {
@@ -373,6 +375,7 @@
 .blog {
   align-self: center;
   flex-direction: column;
+  margin-bottom: 50px;
 }
 .blog .title {
   text-align: center;
@@ -740,16 +743,190 @@
   width: 100%;
   background-color: #fff;
   display: flex;
-  height: 400px;
+  min-height: 400px;
 }
 .product_container .product_content {
   align-items: center;
-  margin: 0 auto;
+  margin: 12px auto;
+  display: flex;
+  flex-direction: column;
+}
+.product_container .product_content .product-info {
+  display: flex;
+  width: 100%;
+  height: 520px;
+}
+.product_container .product_content .product-info .product-images {
+  display: flex;
+  width: 50%;
+  margin: 0 12px;
+}
+.product_container .product_content .product-info .product-images .gallery {
+  overflow: overlay;
+  width: 20%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.product_container .product_content .product-info .product-images .gallery img {
+  margin: 5px 0;
+  padding: 5px 0;
+  max-height: 120px;
+}
+.product_container .product_content .product-info .product-images .slick-slider {
+  display: flex;
+  align-items: center;
+}
+.product_container .product_content .product-info .product-images .slick-slider.image-slider {
+  width: 80%;
+}
+.product_container .product_content .product-info .product-images .slick-slider .slick-list .slick-track {
+  display: flex;
+  align-items: center;
+}
+.product_container .product_content .product-info .product-images .slick-slider .slick-list .slick-slide {
+  padding: 0 25px;
   display: flex;
   justify-content: center;
 }
-.product_container .product_content div {
-  font-size: 54px;
+.product_container .product_content .product-info .product-images .slick-slider .slick-list .slick-slide div {
+  min-height: 400px;
+}
+.product_container .product_content .product-info .product-images .slick-slider .slick-list .slick-slide div img {
+  max-height: 540px;
+  padding: 20px 0;
+}
+.product_container .product_content .product-info .product-images .slick-slider .slick-arrow {
+  width: 35px;
+  height: 35px;
+  z-index: 10;
+}
+.product_container .product_content .product-info .product-images .slick-slider .slick-arrow::before {
+  content: "";
+  display: block;
+  height: 96%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  background-image: url("../assets/arrow-slider.svg");
+}
+.product_container .product_content .product-info .product-images .slick-slider .slick-prev {
+  left: -3px;
+}
+.product_container .product_content .product-info .product-images .slick-slider .slick-next {
+  right: -3px;
+}
+.product_container .product_content .product-info .product-images .slick-slider .slick-next::before {
+  transform: rotate(180deg);
+}
+.product_container .product_content .product-info .product-details {
+  width: 50%;
+  margin: 0 12px;
+}
+.product_container .product_content .product-info .product-details .name {
+  font-size: 24px;
+  margin: 30px 0;
+}
+.product_container .product_content .product-info .product-details .vendor-code {
+  margin: 20px 0;
+  font-size: 15px;
+}
+.product_container .product_content .product-info .product-details .manufacturer {
+  margin: 20px 0;
+}
+.product_container .product_content .product-info .product-details .price {
+  margin: 25px 0;
+  font-size: 22px;
+  font-weight: bold;
+}
+.product_container .product_content .product-info .product-details .price span {
+  color: #ACACAC;
+  text-decoration: line-through;
+  font-size: 20px;
+  margin-right: 12px;
+  font-weight: normal;
+}
+.product_container .product_content .product-info .product-details .modifications-choose-block .sub {
+  display: block;
+  margin-bottom: 10px;
+}
+.product_container .product_content .product-info .product-details .modifications-choose-block .modifications-choose-line {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+}
+.product_container .product_content .product-info .product-details .modifications-choose-block .modifications-choose-line .product-mdf-color__block {
+  width: 40px;
+  height: 40px;
+}
+.product_container .product_content .product-info .product-details .modifications-choose-block .modifications-choose-line .product-mdf-img__wrapper {
+  width: 80px;
+  height: 80px;
+}
+.product_container .product_content .product-info .product-details .modifications-choose-block .modifications-choose-line .product-mdf-img__wrapper .product-mdf-img {
+  height: 100%;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 3px;
+}
+.product_container .product_content .product-info .product-details .modifications-choose-block .modifications-choose-line .product-mdf-txt {
+  height: 40px;
+  min-width: 50px;
+  font-size: 15px;
+  text-overflow: ellipsis;
+  padding: 10px;
+}
+.product_container .product_content .product-info .product-details .modifications-choose-block .modifications-choose-line .product-mdf-item {
+  position: relative;
+  cursor: pointer;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #666;
+  border-radius: 3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: unset;
+}
+.product_container .product_content .product-info .product-details .modifications-choose-block .modifications-choose-line .product-mdf-item::after {
+  content: "";
+  display: none;
+  width: 23px;
+  height: 23px;
+  background-size: 12px;
+  right: -9px;
+  top: -9px;
+  background-color: #5f6d92;
+  background-image: url("../assets/check-marks.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 50%;
+  position: absolute;
+  border: 1px solid #fff;
+}
+.product_container .product_content .product-info .product-details .modifications-choose-block .modifications-choose-line .product-mdf-item:hover, .product_container .product_content .product-info .product-details .modifications-choose-block .modifications-choose-line .product-mdf-item.product-mdf-current {
+  border-color: transparent;
+  outline: 2px solid #5f6d92;
+  border-radius: 0;
+}
+.product_container .product_content .product-info .product-details .modifications-choose-block .modifications-choose-line .product-mdf-item.product-mdf-item-current::after {
+  display: block;
+}
+.product_container .product_content .product-info .product-details .product-buy-block button {
+  margin: 5px 0 10px;
+  background-color: #5f6d92;
+  color: #fff;
+  transition: 0.5s linear;
+  font-weight: normal;
+  padding: 15px;
+  text-transform: uppercase;
+  width: 50%;
+  letter-spacing: 1px;
+}
+.product_container .product_content .product-info .product-details .product-buy-block button:hover {
+  background-color: #4b5673;
 }
 
 * {
